@@ -3,6 +3,8 @@ Changes in @NEW@:
     * cvc merge on a non-shadow no longer returns a traceback (bz# 792),
       and cvc context foo does not return a traceback when context foo does
       not exist (bz #757)  Fixed by David Coulthart.
+    * opening invalid changesets now gives a good error message instead of
+      a traceback
 
 Changes in 1.0.5:
  o Performance improvements:
